set Time Column at first index
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44606

--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
@@ -3,17 +3,17 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              on-ready="gridReady"
-             defaultsortbyfieldname="'ID'"
+             defaultsortbyfieldname="'LogEntryTime'"
              idfield="ID" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'ID'" widthfactor="3"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Time'" field="'LogEntryTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Batch Description'" field="'BatchDescription'" widthfactor="8"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Batch Size'" field="'BatchSize'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Records Count'" field="'RecordsCount'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Mapping Result'" field="'MappingResultDescription'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Mapper Message'" field="'MapperMessage'" widthfactor="17" expendablecolumn></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Execution Status'" field="'ExecutionStatusDescription'" getcolor="getStatusColor" fixedwidth="'100'" disablesorting></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Log Entry Time'" field="'LogEntryTime'" type="'LongDatetime'" widthfactor="5"></vr-datagridcolumn>
 
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
