--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceHistoryGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/BusinessProcess/Directives/BPInstance/Templates/BPInstanceHistoryGridTemplate.html
@@ -3,12 +3,12 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.ProcessInstanceID" defaultsortbyfieldname="'Entity.ProcessInstanceID'" enableautoexport="true">
+             idfield="Entity.ProcessInstanceID" defaultsortdirection="'DESC'"  defaultsortbyfieldname="'Entity.CreatedTime'" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.ProcessInstanceID'" widthfactor="5"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Entity.Title'" type="'Text'" isclickable="true" onclicked="processInstanceClicked" widthfactor="40"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Business Processes'" field="'DefinitionTitle'" type="'Text'" widthfactor="40"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Last Message'" field="'Entity.LastMessage'" type="'Text'" widthfactor="40" expendablecolumn></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Retry'" field="'Entity.RetryCount'" widthfactor="5"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Event Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'"  getcolor="getStatusColor" fixedwidth="'100'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="getStatusColor" fixedwidth="'100'"></vr-datagridcolumn>
 </vr-datagrid>
