--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/CustomerRatePreviewGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SalePriceListChange/Templates/CustomerRatePreviewGrid.html
@@ -3,14 +3,14 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions">
-    <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Customer'" field="'CustomerName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Current Rate'" field="'RecentRate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'100'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'New Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'100'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Change Type'" fixedwidth="'100'" field="'ChangeType'">
+    <vr-datagridcolumn headertext="'Zone'" field="'ZoneName'" type="'Text'" fixedwidth="'220'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Customer'" field="'CustomerName'" type="'Text'" ng-show="scopeModel.showCustomerName" fixedwidth="'220'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Current Rate'" field="'RecentRate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'90'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'New Rate'" field="'Rate'" type="'Number'" numberprecision="'LongPrecision'" fixedwidth="'90'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Change Type'" fixedwidth="'90'" field="'ChangeType'">
         <vr-icon icontype="dataItem.RateChangeTypeIconType" iconurl="dataItem.RateChangeTypeIconUrl" tooltip="dataItem.RateChangeTypeIconTooltip"></vr-icon>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" fixedwidth="'55'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Currency'" field="'CurrencySymbol'" fixedwidth="'65'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'BED'" type="'Date'" fixedwidth="'100'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'EED'" type="'Date'" fixedwidth="'100'"></vr-datagridcolumn>
     <!--<vr-datagridexpandablerow ng-if="ctrl.isNormalRateGrid">
