--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRLocalizationLanguage/Templates/VRLocalizationLanguageGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRLocalizationLanguage/Templates/VRLocalizationLanguageGridTemplate.html
@@ -6,6 +6,6 @@
              idfield="VRLanguageId">
     <vr-datagridcolumn headertext="'Id'" field="'VRLanguageId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Parent Language Id'" field="'ParentLanguageId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Parent Language'" field="'ParentLanguageName'"></vr-datagridcolumn>
 
 </vr-datagrid>
