--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalizationLanguage/VRLocalizationLanguageEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalizationLanguage/VRLocalizationLanguageEditor.html
@@ -7,6 +7,9 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-common-localizationlanguage-selector on-ready="scopeModel.onLocalizationLanguageSelectorReady" customlabel="Parent Language"></vr-common-localizationlanguage-selector>
+                        </vr-columns>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
