--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalizationLanguage/VRLocalizationLanguageEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalizationLanguage/VRLocalizationLanguageEditor.html
@@ -1,20 +1,20 @@
-﻿<div vr-modalcontent ng-controller="VRCommon_VRLocalizationLanguageController" vr-loader="scopeModel.isLoading" width="'35%'">
+﻿<div vr-modalcontent ng-controller="VRCommon_VRLocalizationLanguageController" vr-loader="scopeModel.isLoading" width="'50%'">
     <vr-modalbody>
         <vr-form name="formEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row removeline>
-                        <vr-columns width="1/2row">
-                            <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
-                        </vr-columns>
-                        <vr-columns width="1/2row">
-                            <vr-common-localizationlanguage-selector on-ready="scopeModel.onLocalizationLanguageSelectorReady" customlabel="Parent Language"></vr-common-localizationlanguage-selector>
+                        <vr-columns colnum="6">
+                        <vr-textbox value="scopeModel.name" label="Name" isrequired ></vr-textbox>
+                            </vr-columns>
+                        <vr-columns colnum="6">
+                            <vr-common-localizationlanguage-selector on-ready="scopeModel.onLocalizationLanguageSelectorReady" customlabel="Parent Language" ></vr-common-localizationlanguage-selector>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
         </vr-form>
-    </vr-modalbody>
+    </vr-modalbody>    
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
