--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalization/Module/VRLocalizationModuleEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalization/Module/VRLocalizationModuleEditor.html
@@ -1,1 +1,23 @@
-﻿
+﻿<div vr-modalcontent ng-controller="VRCommon_VRLocalizationModuleController" vr-loader="scopeModel.isLoading" width="'50%'">
+    <vr-modalbody>
+        <vr-form name="formEditor">
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+            </vr-tabs>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Save" formname="formEditor" data-onclick="saveVRLocalizationModule"></vr-button>
+                <vr-button type="Close" data-onclick="close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
