--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/MenualInvoiceBulkActionsRunTimeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/MenualInvoiceBulkActionsRunTimeEditor.html
@@ -21,7 +21,7 @@
                                selectedvalues="scopeModel.selectedHandlingOnError"
                                entityname="Handling"
                                isrequired="true"
-                               label="Handling On Error"
+                               label="Error Handling"
                                hideremoveicon
                                onselectionchanged="scopeModel.onMenualBulkActionSelectionChanged">
                     </vr-select>
