--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/EmailAttachmentsRuntimeTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/EmailAttachmentsRuntimeTemplate.html
@@ -6,18 +6,21 @@
         <vr-switch value="scopeModel.includeSentInvoices" label="Include Sent Invoices"></vr-switch>
     </vr-columns>
     <vr-columns width="fullrow" >
-        <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" maxheight="300px"
-                     on-ready="onGridReady" hidegridmenu>
-            <vr-datagridcolumn fixedwidth="'50'" headertext="'Enabled'" disablesorting="true" invisibleheader>
-                <vr-check value="dataItem.Entity.IsEnabled"></vr-check>
-            </vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Type'" field="'Entity.SetName'" widthfactor="10" disablesorting></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Mail Template'" field="'Entity.Title'" widthfactor="10" disablesorting ng-show="scopeModel.showMaileTypeColumn">
-                <vr-common-mailmessagetemplate-selector ng-if="dataItem.Entity.showMailMessageTemplateSelector" isrequired="dataItem.Entity.IsEnabled" on-ready="dataItem.Entity.onMailMessageTemplateDirectiveReady" hidelabel></vr-common-mailmessagetemplate-selector>
-            </vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Attachments'" widthfactor="10" disablesorting>
-                <vr-invoicetype-invoiceattachments-selector on-ready="dataItem.Entity.onInvoiceAttachmentSelectorReady" normal-col-num="12" hidelabel ismultipleselection></vr-invoicetype-invoiceattachments-selector>
-            </vr-datagridcolumn>
-        </vr-datagrid>
+        <vr-validator validate="scopeModel.validateEmailAttachments()">
+            <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" maxheight="300px"
+                         on-ready="onGridReady" hidegridmenu>
+                <vr-datagridcolumn fixedwidth="'50'" headertext="'Enabled'" disablesorting="true" invisibleheader>
+                    <vr-check value="dataItem.Entity.IsEnabled"></vr-check>
+                </vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Type'" field="'Entity.SetName'" widthfactor="10" disablesorting></vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Mail Template'" field="'Entity.Title'" widthfactor="10" disablesorting ng-show="scopeModel.showMaileTypeColumn">
+                    <vr-common-mailmessagetemplate-selector ng-if="dataItem.Entity.showMailMessageTemplateSelector" isrequired="dataItem.Entity.IsEnabled" ng-show="dataItem.Entity.IsEnabled" on-ready="dataItem.Entity.onMailMessageTemplateDirectiveReady" hidelabel></vr-common-mailmessagetemplate-selector>
+                </vr-datagridcolumn>
+                <vr-datagridcolumn headertext="'Attachments'" widthfactor="10" disablesorting>
+                    <vr-invoicetype-invoiceattachments-selector on-ready="dataItem.Entity.onInvoiceAttachmentSelectorReady" isrequired="dataItem.Entity.IsEnabled" ng-show="dataItem.Entity.IsEnabled" normal-col-num="12" hidelabel ismultipleselection></vr-invoicetype-invoiceattachments-selector>
+                </vr-datagridcolumn>
+            </vr-datagrid>
+        </vr-validator>
+       
     </vr-columns>
 </vr-row>
