add messages to account balance and balance checkes tasks
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44658

--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRBalanceAlertRule/ProcessInput/Scheduled/Templates/BalanceAlertCheckerProcessScheduledTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRBalanceAlertRule/ProcessInput/Scheduled/Templates/BalanceAlertCheckerProcessScheduledTemplate.html
@@ -3,3 +3,8 @@
         <vr-notification-alertruletype-selector isrequired="true" on-ready="alertRuleTypeSelectorReady"></vr-notification-alertruletype-selector>
     </vr-columns>
 </vr-row>
+<vr-row>
+    <vr-columns colnum="12">
+        <vr-label isvalue>A process will be only created if any balance exceeds threshold</vr-label>
+    </vr-columns>
+</vr-row>
