--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/ProcessInput/Scheduled/Templates/AccountBalanceUpdateProcessScheduledTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/ProcessInput/Scheduled/Templates/AccountBalanceUpdateProcessScheduledTemplate.html
@@ -6,3 +6,8 @@
         <vr-textbox value="usageCacheDays" label="Usage Cache Days" isrequired=" true" minvalue="0" type="number"></vr-textbox>
     </vr-columns>
 </vr-row>
+<vr-row>
+    <vr-columns colnum="12">
+        <vr-label isvalue>A process will be only created if pending transactions exist</vr-label>
+    </vr-columns>
+</vr-row>
