--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/ZoneRouteOptionsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/ZoneRouteOptionsTemplate.html
@@ -3,8 +3,12 @@
        style="font-size: 11px; cursor: pointer; display: inline-block; text-align: right; padding: 0px 10px 0px 0px; color: {{routeOption.Color}} ;"
        title="{{::routeOption.title}}"
        ng-click="::ctrl.viewSupplier(routeOption)">
-
-        {{::routeOption.titleToDisplay | vrtextOrNumber:4 }}<span style="color:#FFA500; font-weight:bold;" ng-if="::routeOption.Entity.SupplierZoneMatchHasClosedRate">*</span>
+        <span ng-if="!routeOption.isNumber">
+            {{::routeOption.titleToDisplay}}<span style="color:#FFA500; font-weight:bold;" ng-if="::routeOption.Entity.SupplierZoneMatchHasClosedRate">*</span>
+        </span>
+        <span ng-if="routeOption.isNumber">
+            {{::routeOption.titleToDisplay | vrtextOrNumber:4 }}<span style="color:#FFA500; font-weight:bold;" ng-if="::routeOption.Entity.SupplierZoneMatchHasClosedRate">*</span>
+        </span>
     </a>
 </div>
 
