--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Account/ChangeStatusActionEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Account/ChangeStatusActionEditor.html
@@ -2,8 +2,8 @@
     <vr-modalbody>
         <vr-form name="formChangeStatusActionEditor">
             <vr-row>
-                <vr-columns width="fullrow">
-                    Are you sure you want to continue?
+                <vr-columns width="1/2row">
+                    <vr-datetimepicker label="Status Changed Date" value="scopeModel.statusChangedDate" type="date" isrequired customvalidate="scopeModel.validateChangeStatusDate()"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </vr-form>
@@ -11,8 +11,8 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Yes" data-onclick="scopeModel.save"></vr-button>
-                <vr-button type="No" data-onclick="scopeModel.close"></vr-button>
+                <vr-button type="Apply" data-onclick="scopeModel.save"></vr-button>
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
             </div>
         </vr-actionbar>
     </div>
