--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ObjectTracking/Templates/ObjectTrackingGridTemplate.html
@@ -10,4 +10,6 @@
     <vr-datagridcolumn headertext="'Time'" field="'Entity.Time'" type="'LongDatetime'" fixedwidth="120"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User Name'" field="'UserName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Action Name'" field="'ActionName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Action Description'" field="'Entity.ActionDescription'" type="'Text'"></vr-datagridcolumn>
+
 </vr-datagrid>
