use pager in customer route page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44683

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
@@ -1,7 +1,7 @@
 ﻿<div ng-show="showGrid" vr-loader="isLoading">
     <vr-datagrid datasource="customerRoutes"
                  dataretrievalfunction="dataRetrievalFunction"
-                 pagingtype="'PagingOnScroll'"
+                 pagingtype="'Pager'"
                  on-ready="onGridReady"
                  menuactions="gridMenuActions"
                  getrowstyle="getRowStyle"
