--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
@@ -4,35 +4,25 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-columns colnum="4">
-                            <vr-row>
-                                <span vr-disabled="scopeModel.disable">
-                                    <retail-be-account-selector on-ready="scopeModel.onAccountSelectorReady" isrequired="true" ismultipleselection="true"></retail-be-account-selector>
-                                </span>
-                               
-
-                            </vr-row>
-                            <vr-directivewrapper directive="scopeModel.assignmentRuntime" on-ready="scopeModel.onRuntimeDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
-                        </vr-columns>
+                            <span vr-disabled="scopeModel.accountSelectorDisable">
+                                <retail-be-account-selector on-ready="scopeModel.onAccountSelectorReady" isrequired="true" ismultipleselection="true" customlabel="Account(s)" normalcolnmu="4"></retail-be-account-selector>
+                            </span>
+                            <vr-directivewrapper directive="scopeModel.assignmentRuntime" on-ready="scopeModel.onRuntimeDirectiveReady" isrequired="ctrl.isrequired"></vr-directivewrapper>
+                   
                         <vr-columns colnum="4">
                             <span vr-disabled="scopeModel.accountManagerDisable">
                                 <vr-accountmanager-accountmanager-selector on-ready="scopeModel.onAccountManagerSelectorReady" isrequired="true"></vr-accountmanager-accountmanager-selector>
                             </span>
                         </vr-columns>
                     </vr-row>
-                    <vr-row>
-                        <vr-columns width="fullrow" ng-if="scopeModel.errorMessage != undefined">
-                            <label class="alert alert-danger" vr-alert>{{scopeModel.errorMessage}}</label>
-                        </vr-columns>
-                    </vr-row>
                 </vr-tab>
-                <vr-tab header="'Time'">
+                <vr-tab header="'Effective Date'">
                     <vr-row>
-                        <vr-columns width="1/2row">
-                            <vr-datetimepicker type="dateTime" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
+                        <vr-columns colnum="6">
+                            <vr-datetimepicker type="date" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
                         </vr-columns>
-                        <vr-columns width="1/2row">
-                            <vr-datetimepicker type="dateTime" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
+                        <vr-columns colnum="6">
+                            <vr-datetimepicker type="date" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
