Implementation of LocalizationTextResource
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44691

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRLocalization/TextResource/Templates/VRLocalizationTextResourceGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRLocalization/TextResource/Templates/VRLocalizationTextResourceGridTemplate.html
@@ -1,1 +1,11 @@
-﻿
+﻿<vr-datagrid datasource="scopeModel.vrLocalizationTextResources"
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             pagingtype="'PagingOnScroll'"
+             on-ready="scopeModel.onGridReady"
+             menuactions="scopeModel.menuActions"
+             idfield="VRTextResourceId">
+    <vr-datagridcolumn headertext="'Id'" field="'VRLocalizationTextResourceId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Resource Key'" field="'ResourceKey'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Module Name'" field="'ModuleName'"></vr-datagridcolumn>
+
+</vr-datagrid>
