--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalization/TextResource/VRLocalizationTextResourceEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRLocalization/TextResource/VRLocalizationTextResourceEditor.html
@@ -1,9 +1,25 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<div vr-modalcontent ng-controller="VRCommon_VRLocalizationTextResourceController" vr-loader="scopeModel.isLoading" width="'50%'">
+    <vr-modalbody>
+        <vr-form name="formEditor">
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row removeline>
+                        <vr-columns width="1/2row">
+                            <vr-textbox value="scopeModel.resourceKey" label="ResourceKey" isrequired></vr-textbox>
+                        </vr-columns>
+                        <vr-common-localizationmodule-selector on-ready="scopeModel.onLocalizationModuleSelectorReady" customlabel="Module" normal-col-num="6" isrequired="true"></vr-common-localizationmodule-selector>
 
-</body>
-</html>
+                    </vr-row>
+                </vr-tab>
+            </vr-tabs>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Save" formname="formEditor" data-onclick="saveVRLocalizationTextResource"></vr-button>
+                <vr-button type="Close" data-onclick="close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
